k8s/basics/0-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: basics
  labels:
    istio-injection: enabled
