k8s/basics/deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
    version: v1
  ports:
  - name: http
    port: 80
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
        version: v1
    spec:
      containers:
      - name: nginx
        image: nginx:1.17.8
        volumeMounts:
        - name: index
          mountPath: /usr/share/nginx/html/
        ports:
        - containerPort: 80
      volumes:
        - name: index
          configMap:
            name: nginx-index-html
