k8s/basics/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - "NAME.example.com"
  gateways:
  - gateway
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 80
